<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:background="@drawable/img" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="Choose Your Destination"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="203dp"
            android:hint="@string/lecture_halls">
            <AutoCompleteTextView
                android:id="@+id/auto_complete_lecture_halls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EDBB4D"
                android:textStyle="bold"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="203dp"
            android:hint="@string/parking_lots">
            <AutoCompleteTextView
                android:id="@+id/auto_complete_parkings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EDBB4D"
                android:textStyle="bold"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="203dp"
            android:hint="@string/libraries">
            <AutoCompleteTextView
                android:id="@+id/auto_complete_libraries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EDBB4D"
                android:textStyle="bold"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="203dp"
            android:hint="@string/cafeterias">
            <AutoCompleteTextView
                android:id="@+id/auto_complete_cafeterias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EDBB4D"
                android:textStyle="bold"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="203dp"
            android:hint="@string/offices">
            <AutoCompleteTextView
                android:id="@+id/auto_complete_offices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EDBB4D"
                android:textStyle="bold"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</LinearLayout>